k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reflex
  namespace: reflex
  labels:
    app: reflex
spec:
  type: ClusterIP
  selector:
    app: reflex
  ports:
    - port: 80
      targetPort: 8080
